@@ -5,8 +5,10 @@ import com.intellij.CommonBundle;
 import com.intellij.diagnostic.Activity;
 import com.intellij.diagnostic.StartUpMeasurer;
 import com.intellij.icons.AllIcons;
+import com.intellij.ide.HelpTooltip;
 import com.intellij.ide.IdeBundle;
 import com.intellij.ide.WelcomeWizardUtil;
+import com.intellij.ide.actions.QuickChangeLookAndFeel;
 import com.intellij.ide.plugins.DynamicPluginListener;
 import com.intellij.ide.plugins.IdeaPluginDescriptor;
 import com.intellij.ide.ui.*;
@@ -15,8 +17,10 @@ import com.intellij.ide.ui.laf.darcula.DarculaLaf;
 import com.intellij.ide.ui.laf.darcula.DarculaLookAndFeelInfo;
 import com.intellij.ide.util.PropertiesComponent;
 import com.intellij.openapi.Disposable;
+import com.intellij.openapi.actionSystem.*;
 import com.intellij.openapi.actionSystem.impl.ActionToolbarImpl;
 import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.openapi.application.ModalityState;
 import com.intellij.openapi.components.PersistentStateComponent;
 import com.intellij.openapi.components.RoamingType;
 import com.intellij.openapi.components.State;
@@ -29,22 +33,25 @@ import com.intellij.openapi.extensions.ExtensionPointListener;
 import com.intellij.openapi.extensions.PluginDescriptor;
 import com.intellij.openapi.ui.DialogWrapper;
 import com.intellij.openapi.ui.Messages;
+import com.intellij.openapi.ui.popup.JBPopupFactory;
+import com.intellij.openapi.ui.popup.ListPopup;
 import com.intellij.openapi.ui.popup.util.PopupUtil;
-import com.intellij.openapi.util.IconLoader;
-import com.intellij.openapi.util.SystemInfo;
-import com.intellij.openapi.util.UserDataHolder;
+import com.intellij.openapi.util.*;
 import com.intellij.openapi.util.registry.Registry;
-import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.openapi.util.text.Strings;
 import com.intellij.openapi.wm.impl.IdeGlassPaneImpl;
 import com.intellij.ui.*;
+import com.intellij.ui.components.DefaultLinkButtonUI;
 import com.intellij.ui.popup.OurHeavyWeightPopup;
 import com.intellij.ui.scale.JBUIScale;
+import com.intellij.ui.tree.ui.DefaultTreeUI;
 import com.intellij.util.EventDispatcher;
+import com.intellij.util.FontUtil;
 import com.intellij.util.IJSwingUtilities;
-import com.intellij.util.ObjectUtils;
+import com.intellij.util.SVGLoader;
 import com.intellij.util.concurrency.SynchronizedClearableLazy;
-import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.ui.*;
+import kotlin.Lazy;
 import org.intellij.lang.annotations.JdkConstants;
 import org.jdom.Element;
 import org.jetbrains.annotations.*;
@@ -64,13 +71,14 @@ import java.util.List;
 import java.util.*;
 import java.util.function.BooleanSupplier;
 
-import static com.intellij.util.FontUtil.enableKerning;
-
 @State(name = "LafManager", storages = @Storage(value = "laf.xml", roamingType = RoamingType.PER_OS))
 public final class LafManagerImpl extends LafManager implements PersistentStateComponent<Element>, Disposable {
   private static final Logger LOG = Logger.getInstance(LafManager.class);
 
   @NonNls private static final String ELEMENT_LAF = "laf";
+  @NonNls private static final String ELEMENT_PREFERRED_LIGHT_LAF = "preferred-light-laf";
+  @NonNls private static final String ELEMENT_PREFERRED_DARK_LAF = "preferred-dark-laf";
+  @NonNls private static final String ATTRIBUTE_AUTODETECT = "autodetect";
   @NonNls private static final String ATTRIBUTE_CLASS_NAME = "class-name";
   @NonNls private static final String ATTRIBUTE_THEME_NAME = "themeId";
 
@@ -98,37 +106,50 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     return infos;
   });
 
-  private final UIManager.LookAndFeelInfo myDefaultLightTheme = getDefaultLightTheme();
-  private final UIManager.LookAndFeelInfo myDefaultDarkTheme = new DarculaLookAndFeelInfo();
-  private final UIDefaults ourDefaults = (UIDefaults)UIManager.getDefaults().clone();
+  private final UIManager.LookAndFeelInfo myDefaultLightLaf = getDefaultLightTheme();
+  private final UIManager.LookAndFeelInfo myDefaultDarkLaf = new DarculaLookAndFeelInfo();
+  private final Map<Object, Object> ourDefaults = (UIDefaults)UIManager.getDefaults().clone();
 
   private UIManager.LookAndFeelInfo myCurrentLaf;
-  private final Map<LafReference, HashMap<String, Object>> myStoredDefaults = new HashMap<>();
+  private UIManager.LookAndFeelInfo myPreferredLightLaf;
+  private UIManager.LookAndFeelInfo myPreferredDarkLaf;
+
+  private final Map<LafReference, Map<String, Object>> myStoredDefaults = new HashMap<>();
 
   // A constant from Mac OS X implementation. See CPlatformWindow.WINDOW_ALPHA
-  public static final String WINDOW_ALPHA = "Window.alpha";
+  private static final String WINDOW_ALPHA = "Window.alpha";
 
-  private static final Map<String, String> ourLafClassesAliases = new HashMap<>();
-  private static final Map<String, Integer> lafNameOrder = new HashMap<>();
+  private static final Map<String, String> ourLafClassesAliases = Map.of("idea.dark.laf.classname", DarculaLookAndFeelInfo.CLASS_NAME);
+  private static final Map<String, Integer> lafNameOrder = Map.of(
+    "IntelliJ Light", 0,
+    "macOS Light", 1,
+    "Windows 10 Light", 1,
+    "Darcula", 2,
+    "High contrast", 3
+  );
+  private static final int maxNameOrder = Collections.max(lafNameOrder.values());
 
-  private CollectionComboBoxModel<LafReference> myLafComboBoxModel;
+  private final SynchronizedClearableLazy<CollectionComboBoxModel<LafReference>> myLafComboBoxModel =
+    new SynchronizedClearableLazy<>(() -> new LafComboBoxModel());
 
-  static {
-    ourLafClassesAliases.put("idea.dark.laf.classname", DarculaLookAndFeelInfo.CLASS_NAME);
+  private final Lazy<ActionToolbar> settingsToolbar = new SynchronizedClearableLazy<>(() -> {
+    DefaultActionGroup group = new DefaultActionGroup(new PreferredLafsAction());
+    ActionToolbar toolbar = ActionManager.getInstance().createActionToolbar(ActionPlaces.TOOLBAR, group, true);
+    toolbar.getComponent().setOpaque(false);
+    return toolbar;
+  });
 
-    lafNameOrder.put("IntelliJ Light", 0);
-    lafNameOrder.put("macOS Light", 1);
-    lafNameOrder.put("Windows 10 Light", 1);
-    lafNameOrder.put("Darcula", 2);
-    lafNameOrder.put("High contrast", 3);
-  }
+  private final SystemDarkThemeDetector lafDetector = SystemDarkThemeDetector.createDetector(this::syncLaf);
+
+  private static final LafReference SEPARATOR = new LafReference("", null, null);
 
   private boolean myFirstSetup = true;
   private boolean myUpdatingPlugin = false;
-  private final Set<String> myThemesInUpdatedPlugin = new HashSet<>();
+  private @Nullable String myThemeIdBeforePluginUpdate = null;
+  private boolean autodetect;
 
   private static UIManager.LookAndFeelInfo getDefaultLightTheme() {
-    for(UIThemeProvider provider: UIThemeProvider.EP_NAME.getExtensionList()) {
+    for (UIThemeProvider provider : UIThemeProvider.EP_NAME.getIterable()) {
       if (DEFAULT_LIGHT_THEME_ID.equals(provider.id)) {
         UITheme theme = provider.createTheme();
         if (theme != null) {
@@ -140,13 +161,12 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     return new IntelliJLookAndFeelInfo();
   }
 
-  @NotNull
-  private List<UIManager.LookAndFeelInfo> computeLafList() {
+  private @NotNull List<UIManager.LookAndFeelInfo> computeLafList() {
     List<UIManager.LookAndFeelInfo> lafList = new ArrayList<>();
-    lafList.add(myDefaultLightTheme);
-    lafList.add(myDefaultDarkTheme);
+    lafList.add(myDefaultLightLaf);
+    lafList.add(myDefaultDarkLaf);
 
-    if (!SystemInfo.isMac) {
+    if (!SystemInfoRt.isMac) {
       for (UIManager.LookAndFeelInfo laf : UIManager.getInstalledLookAndFeels()) {
         String name = laf.getName();
         if (!"Metal".equalsIgnoreCase(name)
@@ -208,35 +228,64 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   @Override
   public void initializeComponent() {
-    if (myCurrentLaf != null && !(myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo)) {
-      final UIManager.LookAndFeelInfo laf = findLaf(myCurrentLaf.getClassName());
-      if (laf != null) {
-        boolean needUninstall = StartupUiUtil.isUnderDarcula();
-        setCurrentLookAndFeel(laf); // setup default LAF or one specified by readExternal.
-        updateWizardLAF(needUninstall);
+    ApplicationManager.getApplication().invokeLater(() -> {
+      UIManager.LookAndFeelInfo currentLaf = myCurrentLaf;
+      if (currentLaf != null) {
+        if (currentLaf instanceof UIThemeBasedLookAndFeelInfo) {
+          if (!((UIThemeBasedLookAndFeelInfo)currentLaf).isInitialised()) {
+            setLookAndFeelImpl(myCurrentLaf, false, false);
+          }
+        }
+        else {
+          UIManager.LookAndFeelInfo laf = findLaf(currentLaf.getClassName());
+          if (laf != null) {
+            boolean needUninstall = StartupUiUtil.isUnderDarcula();
+            // setup default LAF or one specified by readExternal
+            setLookAndFeelImpl(laf, false, false);
+            updateWizardLAF(needUninstall);
+          }
+        }
+      }
+
+      updateUI();
+      detectAndSyncLaf();
+      UIThemeProvider.EP_NAME.addExtensionPointListener(new UIThemeEPListener(), this);
+      ApplicationManager.getApplication().getMessageBus().connect(this).subscribe(DynamicPluginListener.TOPIC, new DynamicPluginListener() {
+        @Override
+        public void beforePluginUnload(@NotNull IdeaPluginDescriptor pluginDescriptor, boolean isUpdate) {
+          myUpdatingPlugin = isUpdate;
+          if (myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo) {
+            myThemeIdBeforePluginUpdate = ((UIThemeBasedLookAndFeelInfo) myCurrentLaf).getTheme().getId();
+          }
+          else {
+            myThemeIdBeforePluginUpdate = null;
+          }
+        }
+
+        @Override
+        public void pluginLoaded(@NotNull IdeaPluginDescriptor pluginDescriptor) {
+          myUpdatingPlugin = false;
+          myThemeIdBeforePluginUpdate = null;
+        }
+      });
+    }, ModalityState.any());
+  }
+
+  private void detectAndSyncLaf() {
+    if (lafDetector.getDetectionSupported() && autodetect) {
+      lafDetector.check();
+    }
+  }
+
+  private void syncLaf(boolean systemDark) {
+    if (autodetect) {
+      boolean currentDark = myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo && ((UIThemeBasedLookAndFeelInfo)myCurrentLaf).getTheme().isDark() ||
+                            StartupUiUtil.isUnderDarcula();
+      UIManager.LookAndFeelInfo expectedLaf = systemDark ? myPreferredDarkLaf : myPreferredLightLaf;
+      if (currentDark != systemDark || myCurrentLaf != expectedLaf) {
+        QuickChangeLookAndFeel.switchLafAndUpdateUI(this, expectedLaf, true);
       }
     }
-
-    if (myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo && !((UIThemeBasedLookAndFeelInfo)myCurrentLaf).isInitialised()) {
-      setCurrentLookAndFeel(myCurrentLaf);
-    }
-
-    updateUI();
-
-    UIThemeProvider.EP_NAME.addExtensionPointListener(new UIThemeEPListener(), this);
-//    LafProvider.EP_NAME.addExtensionPointListener(new LafProviderEPListener(), this);
-
-    ApplicationManager.getApplication().getMessageBus().connect(this).subscribe(DynamicPluginListener.TOPIC, new DynamicPluginListener() {
-      @Override
-      public void beforePluginUnload(@NotNull IdeaPluginDescriptor pluginDescriptor, boolean isUpdate) {
-        myUpdatingPlugin = isUpdate;
-      }
-
-      @Override
-      public void pluginLoaded(@NotNull IdeaPluginDescriptor pluginDescriptor) {
-        myThemesInUpdatedPlugin.clear();
-      }
-    });
   }
 
   public void updateWizardLAF(boolean wasUnderDarcula) {
@@ -259,22 +308,25 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   @Override
   public void loadState(@NotNull Element element) {
-    UIManager.LookAndFeelInfo laf = null;
-    Element lafElement = element.getChild(ELEMENT_LAF);
-    if (lafElement != null) {
-      laf = findLaf(lafElement.getAttributeValue(ATTRIBUTE_CLASS_NAME), lafElement.getAttributeValue(ATTRIBUTE_THEME_NAME));
+    myCurrentLaf = loadLafState(element, ELEMENT_LAF);
+    if (myCurrentLaf == null) {
+      myCurrentLaf = getDefaultLaf();
     }
 
-    // If LAF is undefined (wrong class name or something else) we have set default LAF anyway.
-    if (laf == null) {
-      laf = getDefaultLaf();
-    }
-
-    myCurrentLaf = laf;
+    autodetect = Boolean.parseBoolean(element.getAttributeValue(ATTRIBUTE_AUTODETECT));
+    myPreferredLightLaf = Objects.requireNonNullElse(loadLafState(element, ELEMENT_PREFERRED_LIGHT_LAF), myDefaultLightLaf);
+    myPreferredDarkLaf = Objects.requireNonNullElse(loadLafState(element, ELEMENT_PREFERRED_DARK_LAF), myDefaultDarkLaf);
   }
 
-  @Nullable
-  private UIManager.LookAndFeelInfo findLaf(String lafClassName, String themeId) {
+  private @Nullable UIManager.LookAndFeelInfo loadLafState(@NotNull Element element, @NotNull @NonNls String attrName) {
+    Element lafElement = element.getChild(attrName);
+    if (lafElement == null) {
+      return null;
+    }
+    return findLaf(lafElement.getAttributeValue(ATTRIBUTE_CLASS_NAME), lafElement.getAttributeValue(ATTRIBUTE_THEME_NAME));
+  }
+
+  private @Nullable UIManager.LookAndFeelInfo findLaf(@Nullable String lafClassName, @Nullable String themeId) {
     if (lafClassName != null && ourLafClassesAliases.containsKey(lafClassName)) {
       lafClassName = ourLafClassesAliases.get(lafClassName);
     }
@@ -295,19 +347,36 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   @Override
   public void noStateLoaded() {
     myCurrentLaf = getDefaultLaf();
+    myPreferredLightLaf = myDefaultLightLaf;
+    myPreferredDarkLaf = myDefaultDarkLaf;
   }
 
   @Override
   public Element getState() {
     Element element = new Element("state");
-    UIManager.LookAndFeelInfo laf = myCurrentLaf;
+    element.setAttribute(ATTRIBUTE_AUTODETECT, Boolean.toString(autodetect));
+
+    getLafState(element, ELEMENT_LAF, getCurrentLookAndFeel());
+
+    if (myPreferredLightLaf != myDefaultLightLaf) {
+      getLafState(element, ELEMENT_PREFERRED_LIGHT_LAF, myPreferredLightLaf);
+    }
+
+    if (myPreferredDarkLaf != myDefaultDarkLaf) {
+      getLafState(element, ELEMENT_PREFERRED_DARK_LAF, myPreferredDarkLaf);
+    }
+
+    return element;
+  }
+
+  private static void getLafState(@NotNull Element element, @NonNls String attrName, UIManager.LookAndFeelInfo laf) {
     if (laf instanceof TempUIThemeBasedLookAndFeelInfo) {
       laf = ((TempUIThemeBasedLookAndFeelInfo)laf).getPreviousLaf();
     }
     if (laf != null) {
       String className = laf.getClassName();
       if (className != null) {
-        Element child = new Element(ELEMENT_LAF);
+        Element child = new Element(attrName);
         child.setAttribute(ATTRIBUTE_CLASS_NAME, className);
 
         if (laf instanceof UIThemeBasedLookAndFeelInfo) {
@@ -316,7 +385,6 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
         element.addContent(child);
       }
     }
-    return element;
   }
 
   @Override
@@ -326,14 +394,35 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   @Override
   public CollectionComboBoxModel<LafReference> getLafComboBoxModel() {
-    if (myLafComboBoxModel == null) {
-      myLafComboBoxModel = new CollectionComboBoxModel<>(getLafReferences());
-    }
-    return myLafComboBoxModel;
+    return myLafComboBoxModel.getValue();
   }
 
-  private List<LafReference> getLafReferences() {
-    return ContainerUtil.map(myLaFs.getValue(), LafManagerImpl::createLafReference);
+  private List<LafReference> getAllReferences() {
+    List<LafReference> result = new ArrayList<>();
+    boolean addSeparator = false;
+    for (UIManager.LookAndFeelInfo info : myLaFs.getValue()) {
+      if (addSeparator) {
+        result.add(SEPARATOR);
+        addSeparator = false;
+      }
+      result.add(createLafReference(info));
+
+      if (Objects.equals(lafNameOrder.get(info.getName()), maxNameOrder)) {
+        addSeparator = true;
+      }
+    }
+
+    return result;
+  }
+
+  private void updateLafComboboxModel() {
+    myLafComboBoxModel.drop();
+  }
+
+  private void selectComboboxModel() {
+    if (myLafComboBoxModel.isInitialized()) {
+      myLafComboBoxModel.getValue().setSelectedItem(createLafReference(myCurrentLaf));
+    }
   }
 
   @NotNull
@@ -346,55 +435,74 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   @Override
-  public UIManager.LookAndFeelInfo findLaf(LafReference reference) {
+  public UIManager.LookAndFeelInfo findLaf(@NotNull LafReference reference) {
     return findLaf(reference.getClassName(), reference.getThemeId());
   }
 
   @Override
+  @Nullable
   public UIManager.LookAndFeelInfo getCurrentLookAndFeel() {
     return myCurrentLaf;
   }
 
   @Override
-  public LafReference getCurrentLookAndFeelReference() {
-    return createLafReference(myCurrentLaf);
+  public LafReference getLookAndFeelReference() {
+    return createLafReference(getCurrentLookAndFeel());
   }
 
-  public UIManager.LookAndFeelInfo getDefaultLaf() {
+  @Override
+  public ListCellRenderer<LafReference> getLookAndFeelCellRenderer() {
+    return new LafCellRenderer();
+  }
+
+  @Override
+  @NotNull
+  public JComponent getSettingsToolbar() {
+    return settingsToolbar.getValue().getComponent();
+  }
+
+  public @NotNull UIManager.LookAndFeelInfo getDefaultLaf() {
     String wizardLafName = WelcomeWizardUtil.getWizardLAF();
     if (wizardLafName != null) {
       UIManager.LookAndFeelInfo laf = findLaf(wizardLafName);
-      if (laf != null) return laf;
+      if (laf != null) {
+        return laf;
+      }
       LOG.error("Could not find wizard L&F: " + wizardLafName);
     }
 
-    if (SystemInfo.isMac) {
+    if (SystemInfoRt.isMac) {
       String className = IntelliJLaf.class.getName();
       UIManager.LookAndFeelInfo laf = findLaf(className);
-      if (laf != null) return laf;
+      if (laf != null) {
+        return laf;
+      }
       LOG.error("Could not find OS X L&F: " + className);
     }
 
     String appLafName = WelcomeWizardUtil.getDefaultLAF();
     if (appLafName != null) {
       UIManager.LookAndFeelInfo laf = findLaf(appLafName);
-      if (laf != null) return laf;
+      if (laf != null) {
+        return laf;
+      }
       LOG.error("Could not find app L&F: " + appLafName);
     }
 
     String defaultLafName = IntelliJLaf.class.getName();
     UIManager.LookAndFeelInfo laf = findLaf(defaultLafName);
-    if (laf != null) return laf;
+    if (laf != null) {
+      return laf;
+    }
     throw new IllegalStateException("No default L&F found: " + defaultLafName);
   }
 
-  @Nullable
-  private UIManager.LookAndFeelInfo findLaf(@NotNull String className) {
-    if (myDefaultLightTheme.getClassName().equals(className)) {
-      return myDefaultLightTheme;
+  private @Nullable UIManager.LookAndFeelInfo findLaf(@NotNull String className) {
+    if (myDefaultLightLaf.getClassName().equals(className)) {
+      return myDefaultLightLaf;
     }
-    if (myDefaultDarkTheme.getClassName().equals(className)) {
-      return myDefaultDarkTheme;
+    if (myDefaultDarkLaf.getClassName().equals(className)) {
+      return myDefaultDarkLaf;
     }
 
     for (UIManager.LookAndFeelInfo l : myLaFs.getValue()) {
@@ -430,6 +538,9 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
     UIManager.getDefaults().clear();
     UIManager.getDefaults().putAll(ourDefaults);
+    if (!myFirstSetup) {
+      SVGLoader.setColorPatcherForSelection(null);
+    }
 
     // Set L&F
     if (IdeaLookAndFeelInfo.CLASS_NAME.equals(lookAndFeelInfo.getClassName())) { // that is IDEA default LAF
@@ -437,6 +548,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       MetalLookAndFeel.setCurrentTheme(new IdeaBlueMetalTheme());
       try {
         UIManager.setLookAndFeel(laf);
+        updateIconsUnderSelection(false);
       }
       catch (Exception e) {
         Messages.showMessageDialog(
@@ -444,6 +556,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
+        LOG.error(e);
         return;
       }
     }
@@ -452,6 +565,9 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       try {
         UIManager.setLookAndFeel(laf);
         AppUIUtil.updateForDarcula(true);
+        if (lafNameOrder.containsKey(lookAndFeelInfo.getName())) {
+          updateIconsUnderSelection(true);
+        }
       }
       catch (Exception e) {
         Messages.showMessageDialog(
@@ -459,6 +575,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
+        LOG.error(e);
         return;
       }
     }
@@ -469,7 +586,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
           laf = ((PluggableLafInfo)lookAndFeelInfo).createLookAndFeel();
         }
         else {
-          laf = ((LookAndFeel)Class.forName(lookAndFeelInfo.getClassName()).newInstance());
+          laf = (LookAndFeel)Class.forName(lookAndFeelInfo.getClassName()).getConstructor().newInstance();
 
           if (laf instanceof MetalLookAndFeel) {
             MetalLookAndFeel.setCurrentTheme(new DefaultMetalTheme());
@@ -478,6 +595,9 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
             if (laf instanceof UserDataHolder) {
               UserDataHolder userDataHolder = (UserDataHolder)laf;
               userDataHolder.putUserData(UIUtil.LAF_WITH_THEME_KEY, Boolean.TRUE);
+            }
+            if (lafNameOrder.containsKey(lookAndFeelInfo.getName()) && lookAndFeelInfo.getName().endsWith("Light")) {
+              updateIconsUnderSelection(false);
             }
           }
         }
@@ -490,6 +610,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
+        LOG.error(e);
         return;
       }
     }
@@ -504,31 +625,80 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
+        LOG.error(e);
         return;
       }
     }
 
-    if (SystemInfo.isMacOSYosemite) {
+    if (SystemInfoRt.isMac) {
       installMacOSXFonts(UIManager.getLookAndFeelDefaults());
     }
 
-    myCurrentLaf = ObjectUtils.chooseNotNull(lookAndFeelInfo, findLaf(lookAndFeelInfo.getClassName()));
+    myCurrentLaf = lookAndFeelInfo;
+    selectComboboxModel();
 
-    if (!myFirstSetup) {
-      if (!lockEditorScheme) {
-        if (processChangeSynchronously) {
-          updateEditorSchemeIfNecessary(oldLaf, true);
-        }
-        else {
-          ApplicationManager.getApplication().invokeLater(() -> updateEditorSchemeIfNecessary(oldLaf, false));
-        }
+    if (!myFirstSetup && !lockEditorScheme) {
+      if (processChangeSynchronously) {
+        updateEditorSchemeIfNecessary(oldLaf, true);
+      }
+      else {
+        ApplicationManager.getApplication().invokeLater(() -> updateEditorSchemeIfNecessary(oldLaf, false));
       }
     }
     myFirstSetup = false;
   }
 
+  private static void updateIconsUnderSelection(boolean darcula) {
+    Map<String, String> map = new HashMap<>();
+    if (darcula) {
+      map.put("#5e5e5e", "#5778ad");
+      map.put("#c75450", "#a95768");
+      map.put("#6e6e6e", "#afb1b3");
+      //map.put("#f26522", "#b76554"); //red
+      map.put("#f26522b3", "#bc6b43"); //red 70%
+      map.put("#f2652299", "#bc6b43"); //red 60% (same as 70%)
+      map.put("#62b54399", "#579b41"); //green 60%
+      map.put("#f98b9e99", "#ba7481"); //pink 60%
+      map.put("#f4af3d99", "#aa823f"); //yellow 60%
+      map.put("#b99bf899", "#977fca"); //purple 60%
+      map.put("#9aa7b0cc", "#97acc6"); //noun gray 80%
+      map.put("#9aa7b099", "#97acc6"); //noun gray 60% (same as 80%)
+    }
+    else {
+      map.put("#6e6e6e", "#afb1b3");
+      map.put("#db5860", "#b75e73");
+      //map.put("#f26522", "#b56a51"); //red
+      map.put("#f26522b3", "#d38369"); //red 70%
+      map.put("#f2652299", "#d38369"); //red 60% (same as 70%)
+      map.put("#40b6e099", "#5eb6d4"); //blue 60%
+      map.put("#62b54399", "#7ebe65"); //green 60%
+      map.put("#f98b9e99", "#f1a4b2"); //pink 60%
+      map.put("#f4af3d99", "#ecc27d"); //yellow 60%
+      map.put("#b99bf899", "#b49ee2"); //purple 60%
+      map.put("#9aa7b0cc", "#aebdc6"); //noun gray 80%
+      map.put("#9aa7b099", "#aebdc6"); //noun gray 60% (same as 80%)
+      map.put("#40b6e0b3", "#5eb6d4"); //blue 70%
+      map.put("#62b543b3", "#7ebe65"); //green 70%
+      map.put("#f98b9eb3", "#f1a4b2"); //pink 70%
+      map.put("#f4af3db3", "#ecc27d"); //yellow 70%
+      map.put("#b99bf8b3", "#b49ee2"); //purple 70%
+    }
+
+    Map<String, Integer> alpha = new HashMap<>(map.size());
+    map.forEach((key, value) -> alpha.put(value, 255));
+
+     SVGLoader.setColorPatcherForSelection(new SVGLoader.SvgElementColorPatcherProvider() {
+       @Override
+       public SVGLoader.@Nullable SvgElementColorPatcher forPath(@Nullable String path) {
+         return SVGLoader.newPatcher(null, map, alpha);
+       }
+     });
+  }
+
   private void updateEditorSchemeIfNecessary(UIManager.LookAndFeelInfo oldLaf, boolean processChangeSynchronously) {
-    if (oldLaf instanceof TempUIThemeBasedLookAndFeelInfo || myCurrentLaf instanceof TempUIThemeBasedLookAndFeelInfo) return;
+    if (oldLaf instanceof TempUIThemeBasedLookAndFeelInfo || myCurrentLaf instanceof TempUIThemeBasedLookAndFeelInfo) {
+      return;
+    }
     if (myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo) {
       if (((UIThemeBasedLookAndFeelInfo)myCurrentLaf).getTheme().getEditorSchemeName() != null) {
         return;
@@ -562,21 +732,13 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   /**
-   * @deprecated Use {@link AppUIUtil#updateForDarcula(boolean)}
-   */
-  @Deprecated
-  @ApiStatus.ScheduledForRemoval
-  public static void updateForDarcula(boolean isDarcula) {
-    AppUIUtil.updateForDarcula(isDarcula);
-  }
-
-  /**
    * Updates LAF of all windows. The method also updates font of components
    * as it's configured in {@code UISettings}.
    */
   @Override
   public void updateUI() {
     final UIDefaults uiDefaults = UIManager.getLookAndFeelDefaults();
+    uiDefaults.put("LinkButtonUI", DefaultLinkButtonUI.class.getName());
 
     fixPopupWeight();
 
@@ -600,10 +762,9 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
     uiDefaults.put(RenderingHints.KEY_TEXT_ANTIALIASING, AntialiasingType.getKeyForCurrentScope(false));
     uiDefaults.put(RenderingHints.KEY_TEXT_LCD_CONTRAST, UIUtil.getLcdContrastValue());
+
     uiDefaults.put(RenderingHints.KEY_FRACTIONALMETRICS,
-                   UISettings.FORCE_USE_FRACTIONAL_METRICS
-                   ? RenderingHints.VALUE_FRACTIONALMETRICS_ON
-                   : RenderingHints.VALUE_FRACTIONALMETRICS_OFF);
+                   AppUIUtil.adjustFractionalMetrics(UISettings.getPREFERRED_FRACTIONAL_METRICS_VALUE()));
 
     for (Frame frame : Frame.getFrames()) {
       updateUI(frame);
@@ -615,7 +776,9 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   @SuppressWarnings({"MethodMayBeStatic", "UnnecessaryReturnStatement"})
   private void fixMacOSDarkThemeDecorations() {
-    if (!SystemInfo.isMacOSMojave) return;
+    if (!SystemInfo.isMacOSMojave) {
+      return;
+    }
 
     //if (myCurrentLaf == myDefaultDarkTheme
     //    || (myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo && ((UIThemeBasedLookAndFeelInfo)myCurrentLaf).getTheme().isDark())) {
@@ -625,10 +788,10 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   @NotNull
   private static FontUIResource getFont(String yosemite, int size, @JdkConstants.FontStyle int style) {
-    if (SystemInfo.isMacOSElCapitan) {
+    if (SystemInfoRt.isMac) {
       // Text family should be used for relatively small sizes (<20pt), don't change to Display
       // see more about SF https://medium.com/@mach/the-secret-of-san-francisco-fonts-4b5295d9a745#.2ndr50z2v
-      Font font = enableKerning(new Font(SystemInfo.isMacOSCatalina ? ".AppleSystemUIFont" : ".SF NS Text", style, size));
+      Font font = FontUtil.enableKerning(new Font(SystemInfo.isMacOSCatalina ? ".AppleSystemUIFont" : ".SF NS Text", style, size));
       if (!StartupUiUtil.isDialogFont(font)) {
         return new FontUIResource(font);
       }
@@ -636,14 +799,15 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     return new FontUIResource(yosemite, style, size);
   }
 
-
   public static void installMacOSXFonts(UIDefaults defaults) {
+    @SuppressWarnings("SpellCheckingInspection")
     final String face = "Helvetica Neue";
     final FontUIResource uiFont = getFont(face, 13, Font.PLAIN);
     initFontDefaults(defaults, uiFont);
     for (Object key : new HashSet<>(defaults.keySet())) {
-      if (!(key instanceof String)) continue;
-      if (!StringUtil.endsWithIgnoreCase(((String)key), "font")) continue;
+      if (!(key instanceof String) || !Strings.endsWithIgnoreCase(((String)key), "font")) {
+        continue;
+      }
       Object value = defaults.get(key);
       if (value instanceof FontUIResource) {
         FontUIResource font = (FontUIResource)value;
@@ -679,7 +843,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   private static void patchTreeUI(UIDefaults defaults) {
     patchBorder(defaults, "Tree.border");
-    defaults.put("TreeUI", "com.intellij.ui.tree.ui.DefaultTreeUI");
+    defaults.put("TreeUI", DefaultTreeUI.class.getName());
     defaults.put("Tree.repaintWholeRow", true);
     if (isUnsupported(defaults.getIcon("Tree.collapsedIcon"))) {
       defaults.put("Tree.collapsedIcon", LafIconLookup.getIcon("treeCollapsed"));
@@ -751,10 +915,12 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   private static void patchRowHeight(UIDefaults defaults, String key, float prevScale) {
     Object value = defaults.get(key);
     int rowHeight = value instanceof Integer ? (Integer)value : 0;
-    if (rowHeight <= 0) {
+    if (!SystemInfoRt.isMac && !SystemInfoRt.isWindows && Registry.is("linux.row.height.disabled", true)) {
+      rowHeight = 0;
+    }
+    else if (rowHeight <= 0) {
       LOG.warn(key + " = " + value + " in " + UIManager.getLookAndFeel().getName() + "; it may lead to performance degradation");
     }
-    if (!SystemInfo.isMac && !SystemInfo.isWindows && Registry.is("linux.row.height.disabled")) rowHeight = 0;
     defaults.put(key, rowHeight <= 0 ? 0 : JBUIScale.scale((int)(rowHeight / prevScale)));
   }
 
@@ -771,14 +937,14 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   private static void fixPopupWeight() {
     int popupWeight = OurPopupFactory.WEIGHT_MEDIUM;
     String property = System.getProperty("idea.popup.weight");
-    if (property != null) property = StringUtil.toLowerCase(property).trim();
-    if (SystemInfo.isMacOSLeopard) {
+    if (property != null) property = Strings.toLowerCase(property).trim();
+    if (SystemInfoRt.isMac) {
       // force heavy weight popups under Leopard, otherwise they don't have shadow or any kind of border.
       popupWeight = OurPopupFactory.WEIGHT_HEAVY;
     }
     else if (property == null) {
       // use defaults if popup weight isn't specified
-      if (SystemInfo.isWindows) {
+      if (SystemInfoRt.isWindows) {
         popupWeight = OurPopupFactory.WEIGHT_HEAVY;
       }
     }
@@ -836,8 +1002,8 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   private void restoreOriginalFontDefaults(UIDefaults defaults) {
-    LafReference lf = myCurrentLaf == null ? null : getCurrentLookAndFeelReference();
-    HashMap<String, Object> lfDefaults = myStoredDefaults.get(lf);
+    LafReference lf = myCurrentLaf == null ? null : getLookAndFeelReference();
+    Map<String, Object> lfDefaults = myStoredDefaults.get(lf);
     if (lfDefaults != null) {
       for (String resource : ourPatchableFontResources) {
         defaults.put(resource, lfDefaults.get(resource));
@@ -847,8 +1013,8 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   private void storeOriginalFontDefaults(UIDefaults defaults) {
-    LafReference lf = myCurrentLaf == null ? null : getCurrentLookAndFeelReference();
-    HashMap<String, Object> lfDefaults = myStoredDefaults.get(lf);
+    LafReference lf = myCurrentLaf == null ? null : getLookAndFeelReference();
+    Map<String, Object> lfDefaults = myStoredDefaults.get(lf);
     if (lfDefaults == null) {
       lfDefaults = new HashMap<>();
       for (String resource : ourPatchableFontResources) {
@@ -877,6 +1043,24 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     }
   }
 
+  @Override
+  public boolean getAutodetect() {
+    return autodetect;
+  }
+
+  @Override
+  public void setAutodetect(boolean value) {
+    autodetect = value;
+    if (autodetect) {
+      detectAndSyncLaf();
+    }
+  }
+
+  @Override
+  public boolean getAutodetectSupported() {
+    return lafDetector.getDetectionSupported();
+  }
+
   private static void repaintUI(Window window) {
     if (!window.isDisplayable()) {
       return;
@@ -893,13 +1077,13 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     String pasteActionKey = useSimpleActionKeys ? "paste" : DefaultEditorKit.pasteAction;
     String cutActionKey = useSimpleActionKeys ? "cut" : DefaultEditorKit.cutAction;
     // Ctrl+Ins, Shift+Ins, Shift+Del
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_INSERT, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), copyActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_INSERT, InputEvent.SHIFT_MASK | InputEvent.SHIFT_DOWN_MASK), pasteActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, InputEvent.SHIFT_MASK | InputEvent.SHIFT_DOWN_MASK), cutActionKey);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_INSERT, InputEvent.CTRL_DOWN_MASK), copyActionKey);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_INSERT, InputEvent.SHIFT_DOWN_MASK), pasteActionKey);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, InputEvent.SHIFT_DOWN_MASK), cutActionKey);
     // Ctrl+C, Ctrl+V, Ctrl+X
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_C, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), copyActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_V, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), pasteActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_X, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), DefaultEditorKit.cutAction);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_C, InputEvent.CTRL_DOWN_MASK), copyActionKey);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_V, InputEvent.CTRL_DOWN_MASK), pasteActionKey);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_X, InputEvent.CTRL_DOWN_MASK), DefaultEditorKit.cutAction);
   }
 
   public static void initInputMapDefaults(UIDefaults defaults) {
@@ -939,7 +1123,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       defaults.put(fontResource, uiFont);
     }
 
-    if (!SystemInfo.isMac) {
+    if (!SystemInfoRt.isMac) {
       defaults.put("PasswordField.font", monoFont);
     }
     defaults.put("TextArea.font", monoFont);
@@ -947,8 +1131,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     defaults.put("EditorPane.font", textFont);
   }
 
-
-  private static class OurPopupFactory extends PopupFactory {
+  private static final class OurPopupFactory extends PopupFactory {
     public static final int WEIGHT_LIGHT = 0;
     public static final int WEIGHT_MEDIUM = 1;
     public static final int WEIGHT_HEAVY = 2;
@@ -1037,7 +1220,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     }
   }
 
-  private static class DefaultMenuArrowIcon extends MenuArrowIcon {
+  private static final class DefaultMenuArrowIcon extends MenuArrowIcon {
     private static final BooleanSupplier dark = () -> ColorUtil.isDark(UIManager.getColor("MenuItem.selectionBackground"));
     private DefaultMenuArrowIcon() {
       super(AllIcons.Icons.Ide.NextStep,
@@ -1079,15 +1262,12 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       newLaFs.add(newTheme);
       sortThemes(newLaFs);
       myLaFs.setValue(newLaFs);
-      if (myLafComboBoxModel != null) {
-        myLafComboBoxModel.replaceAll(getLafReferences());
-      }
+
+      updateLafComboboxModel();
+
       // When updating a theme plugin that doesn't provide the current theme, don't select any of its themes as current
-      if (!myThemesInUpdatedPlugin.contains(theme.getId())) {
-        setCurrentLookAndFeel(newTheme);
-        if (myLafComboBoxModel != null) {
-          myLafComboBoxModel.setSelectedItem(createLafReference(newTheme));
-        }
+      if (!autodetect && (!myUpdatingPlugin || newTheme.getTheme().getId().equals(myThemeIdBeforePluginUpdate))) {
+        setLookAndFeelImpl(newTheme, false, false);
         JBColor.setDark(newTheme.getTheme().isDark());
         updateUI();
       }
@@ -1102,10 +1282,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
           UITheme theme = ((UIThemeBasedLookAndFeelInfo)lookAndFeel).getTheme();
           if (theme.getId().equals(provider.id)) {
             if (lookAndFeel == getCurrentLookAndFeel()) {
-              switchLafTo = theme.isDark() ? myDefaultDarkTheme : myDefaultLightTheme;
-            }
-            else if (myUpdatingPlugin) {
-              myThemesInUpdatedPlugin.add(theme.getId());
+              switchLafTo = theme.isDark() ? myDefaultDarkLaf : myDefaultLightLaf;
             }
             ((EditorColorsManagerImpl) EditorColorsManager.getInstance()).handleThemeRemoved(theme);
             continue;
@@ -1114,91 +1291,157 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
         list.add(lookAndFeel);
       }
       myLaFs.setValue(list);
-      if (myLafComboBoxModel != null) {
-        myLafComboBoxModel.replaceAll(getLafReferences());
-      }
+      updateLafComboboxModel();
+
       if (switchLafTo != null) {
         setLookAndFeelImpl(switchLafTo, false, true);
-        if (myLafComboBoxModel != null) {
-          myLafComboBoxModel.setSelectedItem(createLafReference(switchLafTo));
-        }
-        JBColor.setDark(switchLafTo == myDefaultDarkTheme);
+        JBColor.setDark(switchLafTo == myDefaultDarkLaf);
         updateUI();
       }
     }
   }
 
-  private class LafProviderEPListener implements ExtensionPointListener<LafProvider> {
+  private static class LafCellRenderer extends SimpleListCellRenderer<LafReference> {
+    private static final SeparatorWithText separator = new SeparatorWithText() {
+      @Override
+      protected void paintComponent(Graphics g) {
+        g.setColor(getForeground());
+
+        Rectangle bounds = new Rectangle(getWidth(), getHeight());
+        JBInsets.removeFrom(bounds, getInsets());
+
+        paintLine(g, bounds.x, bounds.y + bounds.height/2, bounds.width);
+      }
+    };
+
     @Override
-    public void extensionAdded(@NotNull LafProvider extension, @NotNull PluginDescriptor pluginDescriptor) {
-      PluggableLafInfo newLaf = extension.getLookAndFeelInfo();
-      List<UIManager.LookAndFeelInfo> lafList = myLaFs.getValue();
-      for (UIManager.LookAndFeelInfo lafInfo : lafList) {
-        if (lafInfo.getName().equals(newLaf.getName()) && lafInfo.getClassName().equals(newLaf.getClassName())) {
-          return;
+    public Component getListCellRendererComponent(JList<? extends LafReference> list,
+                                                  LafReference value,
+                                                  int index,
+                                                  boolean isSelected,
+                                                  boolean cellHasFocus) {
+      return value == SEPARATOR ? separator : super.getListCellRendererComponent(list, value, index, isSelected, cellHasFocus);
+    }
+
+    @Override
+    public void customize(@NotNull JList<? extends LafReference> list, LafReference value, int index, boolean selected, boolean hasFocus) {
+      setText(value.toString());
+    }
+  }
+
+  private final class LafComboBoxModel extends CollectionComboBoxModel<LafReference> {
+    private LafComboBoxModel() {
+      super(getAllReferences());
+    }
+
+    @Override
+    public void setSelectedItem(@Nullable Object item) {
+      if (item == SEPARATOR) return;
+      super.setSelectedItem(item);
+    }
+  }
+
+  private final class PreferredLafsAction extends DefaultActionGroup {
+    private PreferredLafsAction() {
+      setPopup(true);
+      getTemplatePresentation().setIcon(AllIcons.General.GearPlain);
+      getTemplatePresentation().setText(IdeBundle.message("preferred.theme.text"));
+      getTemplatePresentation().setDescription(IdeBundle.message("preferred.theme.description"));
+    }
+
+    @Override
+    public boolean isDumbAware() {
+      return true;
+    }
+
+    @Override
+    public boolean canBePerformed(@NotNull DataContext context) {
+      return true;
+    }
+
+    @Override
+    public void actionPerformed(@NotNull AnActionEvent e) {
+      ListPopup popup = JBPopupFactory.getInstance().
+        createActionGroupPopup(IdeBundle.message("preferred.theme.text"), getLafGroups(), e.getDataContext(), true, null, Integer.MAX_VALUE);
+
+      HelpTooltip.setMasterPopup(e.getInputEvent().getComponent(), popup);
+      Component component = e.getInputEvent().getComponent();
+      if (component instanceof ActionButtonComponent) {
+        popup.showUnderneathOf(component);
+      }
+      else {
+        popup.showInCenterOf(component);
+      }
+    }
+
+    private ActionGroup getLafGroups() {
+      List<UIManager.LookAndFeelInfo> lightLafs = new ArrayList<>();
+      List<UIManager.LookAndFeelInfo> darkLafs = new ArrayList<>();
+
+      for (UIManager.LookAndFeelInfo lafInfo : myLaFs.getValue()) {
+        if (lafInfo instanceof UIThemeBasedLookAndFeelInfo && ((UIThemeBasedLookAndFeelInfo)lafInfo).getTheme().isDark() ||
+            lafInfo.getName().equals(DarculaLaf.NAME)) {
+          darkLafs.add(lafInfo);
+        }
+        else {
+          lightLafs.add(lafInfo);
         }
       }
 
-      List<UIManager.LookAndFeelInfo> newLaFs = new ArrayList<>(lafList.size() + 1);
-      newLaFs.addAll(lafList);
-      newLaFs.add(newLaf);
+      DefaultActionGroup group = new DefaultActionGroup();
+      group.addAll(createThemeActions(IdeBundle.message("preferred.theme.light.header"), lightLafs, false));
+      group.addAll(createThemeActions(IdeBundle.message("preferred.theme.dark.header"), darkLafs, true));
+      return group;
+    }
 
-      sortThemes(newLaFs);
-
-      myLaFs.setValue(newLaFs);
-      if (myLafComboBoxModel != null) {
-        myLafComboBoxModel.replaceAll(getLafReferences());
+    private @NotNull Collection<AnAction> createThemeActions(@NotNull @NlsContexts.Separator String separatorText,
+                                                             @NotNull List<UIManager.LookAndFeelInfo> lafs,
+                                                             boolean isDark) {
+      List<AnAction> result = new ArrayList<>();
+      if (!lafs.isEmpty()) {
+        result.add(Separator.create(separatorText));
+        lafs.stream()
+          .map(l -> new LafToggleAction(l.getName(), l, isDark))
+          .forEach(a -> result.add(a));
       }
+      return result;
+    }
+  }
 
-      if (!myThemesInUpdatedPlugin.contains(newLaf.getName())) {
-        setCurrentLookAndFeel(newLaf);
-        if (myLafComboBoxModel != null) {
-          myLafComboBoxModel.setSelectedItem(newLaf);
+  private final class LafToggleAction extends ToggleAction {
+    private final UIManager.LookAndFeelInfo lafInfo;
+    private final boolean isDark;
+
+    private LafToggleAction(@Nls String name, UIManager.LookAndFeelInfo lafInfo, boolean isDark) {
+      super(name);
+      this.lafInfo = lafInfo;
+      this.isDark = isDark;
+    }
+
+    @Override
+    public boolean isSelected(@NotNull AnActionEvent e) {
+      return isDark ? lafInfo == myPreferredDarkLaf : lafInfo == myPreferredLightLaf;
+    }
+
+    @Override
+    public void setSelected(@NotNull AnActionEvent e, boolean state) {
+      if (isDark) {
+        if (myPreferredDarkLaf != lafInfo) {
+          myPreferredDarkLaf = lafInfo;
+          detectAndSyncLaf();
         }
-        JBColor.setDark(newLaf.isDark());
-        updateUI();
+      }
+      else {
+        if (myPreferredLightLaf != lafInfo) {
+          myPreferredLightLaf = lafInfo;
+          detectAndSyncLaf();
+        }
       }
     }
 
     @Override
-    public void extensionRemoved(@NotNull LafProvider extension, @NotNull PluginDescriptor pluginDescriptor) {
-      UIManager.LookAndFeelInfo switchLafTo = null;
-      List<UIManager.LookAndFeelInfo> list = new ArrayList<>();
-
-      PluggableLafInfo removedLafInfo = extension.getLookAndFeelInfo();
-
-      for (UIManager.LookAndFeelInfo lafInfo : getInstalledLookAndFeels()) {
-        if (lafInfo instanceof PluggableLafInfo) {
-          PluggableLafInfo pluggableLafInfo = (PluggableLafInfo)lafInfo;
-          if (StringUtil.equals(pluggableLafInfo.getName(), removedLafInfo.getName()) &&
-              StringUtil.equals(pluggableLafInfo.getClassName(), removedLafInfo.getClassName())) {
-
-            if (lafInfo == getCurrentLookAndFeel()) {
-              switchLafTo = pluggableLafInfo.isDark() ? myDefaultDarkTheme : myDefaultLightTheme;
-            }
-            else if (myUpdatingPlugin) {
-              myThemesInUpdatedPlugin.add(pluggableLafInfo.getName());
-            }
-            continue;
-          }
-        }
-
-        list.add(lafInfo);
-      }
-
-      myLaFs.setValue(list);
-      if (myLafComboBoxModel != null) {
-        myLafComboBoxModel.replaceAll(getLafReferences());
-      }
-
-      if (switchLafTo != null) {
-        setLookAndFeelImpl(switchLafTo, false, true);
-        if (myLafComboBoxModel != null) {
-          myLafComboBoxModel.setSelectedItem(switchLafTo);
-        }
-        JBColor.setDark(switchLafTo == myDefaultDarkTheme);
-        updateUI();
-      }
+    public boolean isDumbAware() {
+      return true;
     }
   }
 }
